--- a/index.html
+++ b/index.html
@@ -316,14 +316,14 @@
 <div class="backdrop is-hidden" data-modal>
     <div class="modal">
         <p>Модальное окно</p>
-        <button type="button" class="modal-close-btn" data-modal-close><img src="./images/icons.svg/Form.svg" alt="Закрытие модального окна"></button>
         <button type="button" class="modal-close-btn" data-modal-close>
             <svg width="11" height="11">
-                <use href="./images/icons.svg/close.svg#icon-close"></use>
+            <use href="./images/icons.svg/vector.svg#icon-Vector"></use>
             </svg>
         </button>
     </div>
 </div>
+<script src="./js/modal.js"></script>
 </body>
 </html>
 
