--- a/portfolio.html
+++ b/portfolio.html
@@ -46,67 +46,131 @@
         </ul>
     
 <ul class="flex-container">
-            <li class="flex-element"><a class="portfolio-link" href="" target="_blank" rel="noreferrer noopener nofollow">
-                <img src="./images/img1.2.jpg" alt="компьютер с фото" width="370"
-                height="294">
-                <div class="card"><h2>Технокряк</h2>
-                    <p>Веб-сайт</p>
+            <li class="flex-element">
+                <a class="portfolio-link" href="" target="_blank" rel="noreferrer noopener nofollow">
+                <div class="card">
+                <img src="./images/img1.2.jpg" alt="компьютер с фото" width="370" height="294">
+                  <div class="card-overlay">
+                    <p class="card-overlay-text">Ресурс предлагает комплексные предложения с разным уровнем функционала и
+                        сервисов. Все это позволит посетителю получить
+                        исчерпывающие сведения о компании или частном лице.</p>
+                </div>
+                </div>
+                <div class="card-group">
+                    <h2>Технокряк</h2>
+                    <p class="flex-container-text">Веб-сайт</p>
                 </div>  
             </a></li>
             <li class="flex-element"><a class="portfolio-link" href="" target="_blank" rel="noreferrer noopener nofollow">
-                <img src="./images/img2.2.jpg" alt="баскетбол" width="370" 
-                height="294">
-                <div class="card"><h2 lang="en">Постер New Orlean vs Golden Star</h2>
-                        <p>Дизайн</p>
+                    <div class="card">
+                    <img src="./images/img2.2.jpg" alt="компьютер с фото" width="370" height="294">
+                    <div class="card-overlay">
+                      <p class="card-overlay-text">Ресурс предлагает комплексные предложения с разным уровнем функционала и
+                          сервисов. Все это позволит посетителю получить
+                          исчерпывающие сведения о компании или частном лице.</p>
+                  </div>
+                  </div>
+                  <div class="card-group">
+                    <h2 lang="en">Постер New Orlean vs Golden Star</h2>
+                    <p class="flex-container-text">Дизайн</p>
                 </div>
             </a></li>
             <li class="flex-element"><a class="portfolio-link" href="" target="_blank" rel="noreferrer noopener nofollow">
-                <img src="./images/img3.2.jpg" alt="логотип" width="370"
-                height="294">
-                <div class="card">    <h2>Ресторан Seafood</h2>
-                        <p>Приложение</p>
+                 <div class="card"> 
+                    <img src="./images/img3.2.jpg" alt="компьютер с фото" width="370" height="294">
+                    <div class="card-overlay">
+                      <p class="card-overlay-text">Ресурс предлагает комплексные предложения с разным уровнем функционала и
+                          сервисов. Все это позволит посетителю получить
+                          исчерпывающие сведения о компании или частном лице.</p>
+                  </div>
+                  </div>
+                  <div class="card-group">
+                    <h2>Ресторан Seafood</h2>
+                        <p class="flex-container-text">Приложение</p>
                 </div>
             </a></li>
            <li class="flex-element"><a class="portfolio-link" href="" target="_blank" rel="noreferrer noopener nofollow">
-               <img src="./images/img4.2.jpg" alt="наушники" width="370" 
-               height="294">
-               <div class="card">   <h2>Проект Prime</h2>
-                       <p>Маркетинг</p>
+                <div class="card">
+                    <img src="./images/img4.2.jpg" alt="компьютер с фото" width="370" height="294">
+                    <div class="card-overlay">
+                      <p class="card-overlay-text">Ресурс предлагает комплексные предложения с разным уровнем функционала и
+                          сервисов. Все это позволит посетителю получить
+                          исчерпывающие сведения о компании или частном лице.</p>
+                  </div>
+                  </div>
+                  <div class="card-group">
+                    <h2>Проект Prime</h2>
+                       <p class="flex-container-text">Маркетинг</p>
                 </div>
             </a></li>
             <li class="flex-element"><a class="portfolio-link" href="" target="_blank" rel="noreferrer noopener nofollow">
-               <img src="./images/img5.2.jpg" alt="коробки" width="370" 
-               height="294">
-               <div class="card">   <h2>Проект Boxes</h2>
-                       <p>Приложение</p>
+                <div class="card">
+                    <img src="./images/img5.2.jpg" alt="компьютер с фото" width="370" height="294">
+                    <div class="card-overlay">
+                      <p class="card-overlay-text">Ресурс предлагает комплексные предложения с разным уровнем функционала и
+                          сервисов. Все это позволит посетителю получить
+                          исчерпывающие сведения о компании или частном лице.</p>
+                  </div>
+                  </div>
+                  <div class="card-group">
+                    <h2>Проект Boxes</h2>
+                       <p class="flex-container-text">Приложение</p>
                 </div>
             </a></li>
             <li class="flex-element"><a class="portfolio-link" href="" target="_blank" rel="noreferrer noopener nofollow">
-               <img src="./images/img6.2.jpg" alt="компьютер" width="370"
-                height="294">
-                <div class="card">  <h2>Inspiration has no Borders</h2>
-                       <p>Веб-сайт</p>
+                <div class="card"> 
+                    <img src="./images/img6.2.jpg" alt="компьютер с фото" width="370" height="294">
+                    <div class="card-overlay">
+                      <p class="card-overlay-text">Ресурс предлагает комплексные предложения с разным уровнем функционала и
+                          сервисов. Все это позволит посетителю получить
+                          исчерпывающие сведения о компании или частном лице.</p>
+                  </div>
+                  </div>
+                  <div class="card-group">
+                    <h2>Inspiration has no Borders</h2>
+                       <p class="flex-container-text">Веб-сайт</p>
                 </div>
             </a></li>
             <li class="flex-element"><a class="portfolio-link" href="" target="_blank" rel="noreferrer noopener nofollow">
-                <img src="./images/img7.2.jpg" alt="книга" width="370"
-                height="294">
-                <div class="card">    <h2>Издание Limited Edition</h2>
-                        <p>Дизайн</p>
+                <div class="card">
+                    <img src="./images/img7.2.jpg" alt="компьютер с фото" width="370" height="294">
+                    <div class="card-overlay">
+                      <p class="card-overlay-text">Ресурс предлагает комплексные предложения с разным уровнем функционала и
+                          сервисов. Все это позволит посетителю получить
+                          исчерпывающие сведения о компании или частном лице.</p>
+                  </div>
+                  </div>
+                  <div class="card-group">
+                    <h2>Издание Limited Edition</h2>
+                        <p class="flex-container-text">Дизайн</p>
                 </div>
             </a></li>
             <li class="flex-element"><a class="portfolio-link" href="" target="_blank" rel="noreferrer noopener nofollow">
-                <img src="./images/img8.2.jpg" alt="бирка" width="370"
-                height="294">
-                <div class="card">    <h2>Проект LAB</h2>
-                        <p>Маркетинг</p>
+                 <div class="card">  
+                    <img src="./images/img8.2.jpg" alt="компьютер с фото" width="370" height="294">
+                    <div class="card-overlay">
+                      <p class="card-overlay-text">Ресурс предлагает комплексные предложения с разным уровнем функционала и
+                          сервисов. Все это позволит посетителю получить
+                          исчерпывающие сведения о компании или частном лице.</p>
+                  </div>
+                  </div>
+                  <div class="card-group">
+                    <h2>Проект LAB</h2>
+                        <p class="flex-container-text">Маркетинг</p>
                 </div>
             </a></li>
             <li class="flex-element"><a class="portfolio-link" href="" target="_blank" rel="noreferrer noopener nofollow">
-                <img src="./images/img9.2.jpg" alt="лэптоп" width="370"
-                height="294">
-                <div class="card">    <h2>Growing Business</h2>
-                        <p>Приложение</p>
+                  <div class="card">
+                    <img src="./images/img9.2.jpg" alt="компьютер с фото" width="370" height="294">
+                    <div class="card-overlay">
+                      <p class="card-overlay-text">Ресурс предлагает комплексные предложения с разным уровнем функционала и
+                          сервисов. Все это позволит посетителю получить
+                          исчерпывающие сведения о компании или частном лице.</p>
+                  </div>
+                  </div>
+                  <div class="card-group">
+                    <h2>Growing Business</h2>
+                        <p class="flex-container-text">Приложение</p>
                 </div>        
             </a></li>
         
@@ -128,7 +192,7 @@
         </address>
             </div>
             <div class="footer-slogan">
-                <h2>ПРИСОЕДИНЯЙТЕСЬ</h2>
+                <p>ПРИСОЕДИНЯЙТЕСЬ</p>
                 <ul class="footer-link">
                     <li class="list-icon"><a class="footer-link-item" href="htps://www.instagram.com" >
                         <svg class="footer-icon" width="20" height="20">
