--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
             </li>
            <li><a class="tel" href="tel:+380961111111" target="_blank">
             <svg class="icon-phone" width="12px" height="16px">
-                <use href="./images/icons.svg/symbol-defs.svg#smartphone"></use>
+                <use href="./images/icons.svg/smartphone.svg#icon-smartphone"></use>
             </svg>+38 096 111 11 11</a>
            </li>
        </ul>
